Details
-
Bug
-
Status: Resolved
-
Major
-
Resolution: Fixed
-
2.0.0
-
AWS EMR 5.22 (also tried EMR 5.31 and EMR 6.1)
Amazon Linux AMI 2018.03
R version 3.4.1
Description
R install on clean AWS EMR fails. I've tried multiple methods:
From within R
> source("https://raw.githubusercontent.com/apache/arrow/master/r/R/install-arrow.R")
> install_arrow()
{{}}
And also via:
sudo R -e "install.packages('arrow', repos ='https://cloud.r-project.org',dependencies = TRUE)"
All dependencies seem to install ok but the arrow R package itself fails:
++ -m64 -std=gnu++11 -I/usr/include/R -DNDEBUG -I/mnt/tmp/RtmpVCRQK4/R.INSTALL591557cd8b23/arrow/libarrow/arrow-2.0.0/include -DARROW_R_WITH_ARROW -I"/usr/lib64/R/library/cpp11/include" -I/usr/local/include -fpic -O2 -g -pipe -Wall -Wp,-D_FORTIFY_SOURCE=2 -fexceptions -fstack-protector --param=ssp-buffer-size=4 -m64 -mtune=generic -c array_from_vector.cpp -o array_from_vector.o
array_from_vector.cpp: In instantiation of 'std::shared_ptr<arrow::Array> arrow::r::MakeSimpleArray(SEXP) [with int RTYPE = 13; RVector = cpp11::r_vector<int>; Type = arrow::Int32Type; SEXP = SEXPREC*]':
array_from_vector.cpp:1406:65: required from here
array_from_vector.cpp:1361:59: error: 'DATAPTR' was not declared in this scope
auto p_vec_start = reinterpret_cast<value_type>(DATAPTR(vec));*
~~~~~~^~~~
array_from_vector.cpp:1380:10: error: unable to deduce 'auto' from 'first_na'
auto p_vec = first_na;
^~~~~
array_from_vector.cpp: In instantiation of 'std::shared_ptr<arrow::Array> arrow::r::MakeSimpleArray(SEXP) [with int RTYPE = 14; RVector = cpp11::r_vector<double>; Type = arrow::Int64Type; SEXP = SEXPREC*]':
array_from_vector.cpp:1408:65: required from here
array_from_vector.cpp:1361:59: error: 'DATAPTR' was not declared in this scope
auto p_vec_start = reinterpret_cast<value_type>(DATAPTR(vec));*
~~~~~~^~~~
array_from_vector.cpp:1380:10: error: unable to deduce 'auto' from 'first_na'
auto p_vec = first_na;
^~~~~
array_from_vector.cpp: In instantiation of 'std::shared_ptr<arrow::Array> arrow::r::MakeSimpleArray(SEXP) [with int RTYPE = 14; RVector = cpp11::r_vector<double>; Type = arrow::DoubleType; SEXP = SEXPREC*]':
array_from_vector.cpp:1410:66: required from here
array_from_vector.cpp:1361:59: error: 'DATAPTR' was not declared in this scope
auto p_vec_start = reinterpret_cast<value_type*>(DATAPTR(vec));
~~~~~~^~~~
array_from_vector.cpp:1380:10: error: unable to deduce 'auto' from 'first_na'
auto p_vec = first_na;
^~~~~
array_from_vector.cpp: In instantiation of 'std::shared_ptr<arrow::Array> arrow::r::MakeSimpleArray(SEXP) [with int RTYPE = 24; RVector = cpp11::r_vector<unsigned char>; Type = arrow::UInt8Type; SEXP = SEXPREC*]':
array_from_vector.cpp:1412:61: required from here
array_from_vector.cpp:1361:59: error: 'DATAPTR' was not declared in this scope
auto p_vec_start = reinterpret_cast<value_type>(DATAPTR(vec));*
~~~~~~^~~~
array_from_vector.cpp:1380:10: error: unable to deduce 'auto' from 'first_na'
auto p_vec = first_na;
^~~~~
make: *** [array_from_vector.o] Error 1
ERROR: compilation failed for package 'arrow'
- removing '/usr/lib64/R/library/arrow'
The downloaded source packages are in
'/mnt/tmp/RtmpyLdG80/downloaded_packages'
Updating HTML index of packages in '.Library'
Making 'packages.html' ... done
Warning message:
In install.packages("arrow", repos = arrow_repos(repos, nightly), :
installation of package 'arrow' had non-zero exit status
{{}}
Attachments
Issue Links
- links to