define DATAPTR for versions of R < 3.5

ARROW-10803